crates/test-files/fixtures/compile_errors/not_callable.fe
contract Foo {
    fn call_int() {
        5()
    }

    fn call_self(self) {
        self()
    }
}
